@@ -191,7 +191,7 @@ void KMountMan::autoMount( QString path ) {
 
 void KMountMan::eject( QString mntPoint ) {
    KShellProcess proc;
-   proc << KrServices::fullPathName( "eject" ) << "\"" + mntPoint + "\"";
+   proc << KrServices::fullPathName( "eject" ) << "'" + mntPoint + "'";
    proc.start( KProcess::Block );
    if ( !proc.normalExit() || proc.exitStatus() != 0 )         // if we failed with eject
       KMessageBox::information( 0, i18n( "Error ejecting device! You need to have 'eject' in your path." ), i18n( "Error" ), "CantExecuteEjectWarning" );
