@@ -48,6 +48,7 @@
   CHANGED: Use WhatsThis in favour of tooltips where reasonable
   CHANGED: the panel startup is profile based instead of directory based
 
+    FIXED: krarc error, when the filename contains '$' or '&'
     FIXED: synchronizer, compare by content can be terminated by <Stop>
     FIXED: preserve date fails at moving
     FIXED: bookmark issues (http://www.krusader.org/phpBB/viewtopic.php?p=6357#6357)
